# Skinny-Pi

./: .gitignore  .secrets  README.md  lockup-analysis-2025-11-28.md
_docs/: Cursor-as-Submodule-Approach.md  DiPi Setup (Prod Only).md  Direct-Submodule-Approach.md  Multiple-Direct-Submodules.md  Sharables-Complete-System.md  Sharables-Cross-Platform.md  Sharables-Deployment-Guide.md  Sharables-Example-Config.yaml  Sharables-Monorepo-Guide.md  Sharables-Quick-Reference.md  Sharables-Requirements.md  Sharables-Setup-Summary.md  Sharables-Windows-Symlinks.md  Sharables-with-Submodules.md  swap-configuration.md
_scripts/: migrate-to-sharables.sh  prompt-wizard.go  prompt.sh  setup-cursor-submodule.sh  setup-dietpi-swap.sh  setup-git-crypt.sh  setup-git-remote.sh  setup-multiple-direct-submodules.sh  setup-sharables-repo.sh  setup-sharables-with-submodules.sh  sharables-deploy.py  sharables-deploy.sh  sharables-git-helper.py  sharables-git-helper.sh
_scripts/Colors/: ansii-color-chart.js  hex-intensity.js  test-red-colors.sh
_scripts/mqtt/: mqtt-helper.sh
projects/iMenu/: build.ps1  build.sh  demo-4-methods.sh  demo-prompt.sh  demo-wizard.sh  go.mod  go.sum  iwizard-functions.sh  prompt-bubbletea.go  prompt-examples.sh  prompt-survey.go  prompt-wizard  prompt-wizard.go  test-lipgloss-color.go  wizard-example.json  wizard.ps1  wizard.sh
projects/iMenu/demos/: demo-huh-prompts.sh  demo-powershell.ps1  demo-wizard.sh
projects/iMenu/docs/: README-powershell.md
rust/: Cargo.toml  Rust-TUI-Structure.md
rust/dev/bootstrapper/: Cargo.toml
rust/dev/bootstrapper/bootstraps/: bootstrap-github.sh  bootstrap-go.sh  bootstrap-omz.sh  mqtt-helper.sh  setup-universal-mqtt-auth.sh
rust/dev/bootstrapper/src/: app.rs  config.rs  events.rs  lib.rs  main.rs  ui.rs
rust/dev/chamon/: Cargo.toml  config.yaml
rust/dev/chamon/examples/: 01_dashboard_layout.rs  02_split_comparison_layout.rs  03_tabbed_interface_layout.rs  04_baseline_progress_view.rs  05_timeline_view.rs  06_maximized_content_layout.rs  07_card_based_layout.rs  README.md  TAB_BAR_STYLES_TEST.md  tab_bar_debug.rs  tab_bar_demo.rs  tab_bar_styles_test.rs  tab_bar_test.rs
rust/dev/chamon/src/: app.rs  baseline.rs  config.rs  events.rs  lib.rs  main.rs  ui.rs
rust/dev/chamon/src/views/: baselines.rs  changes.rs  dashboard.rs  mod.rs  popup.rs
rust/dev/detour/: Cargo.toml
rust/dev/detour/src/: app.rs  config.rs  diff.rs  events.rs  filebrowser.rs  injection.rs  lib.rs  main.rs  manager.rs  mirror.rs  popup.rs  ui.rs  validation.rs
rust/dev/detour/src/components/: mod.rs
rust/dev/detour/src/forms/: mod.rs
rust/dev/detour/src/operations/: mod.rs
rust/dev/hasync/: Cargo.toml
rust/dev/hasync/src/: app.rs  config.rs  events.rs  lib.rs  main.rs  ui.rs
rust/resources/components/: Cargo.toml
rust/resources/components/src/: base_layout.rs  file_browser.rs  lib.rs  popup.rs  tab_bar.rs  toast.rs
rust/resources/examples/: Cargo.toml  README.md
rust/resources/examples/src/: tab_bar_example.rs
zsh/: .zshrc
zsh/custom/themes/: focused.zsh-theme
