[package]
name = "bootstrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bootstrapper TUI application"

[lib]
name = "bootstrapper"
path = "src/lib.rs"

[[bin]]
name = "bootstrapper"
path = "src/main.rs"

[dependencies]
# Shared components
tui-components = { path = "../../resources/components" }

# TUI dependencies
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true

