[package]
name = "hasync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hsync TUI application"

[lib]
name = "hasync"
path = "src/lib.rs"

[[bin]]
name = "hasync"
path = "src/main.rs"

[dependencies]
# Shared components
tui-components = { path = "../../resources/components" }

# TUI dependencies
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true

